@@ -2,6 +2,7 @@ autodep8 (0.6) UNRELEASED; urgency=medium
 
   * Add check_fail function to test/helper.sh.
   * Add support for ELPA package testsuites run by dh_elpa_test.
+  * Add test suite for ELPA package testsuite detection.
   * Bump copyright years in d/copyright.
 
  -- Sean Whitton <spwhitton@spwhitton.name>  Tue, 10 May 2016 11:51:14 -0700
